# 2024-Genstar

./: .env.example  .gitlab-ci.yml  docker-compose.yml
.github/workflows/: firebase-hosting-deploy.yaml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  update-requirements.yml
.gitlab-ci/: build.yml  deploy.yml  lint-and-test.yml
backend/: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  start.sh
backend/app/: main.py
backend/app/core/: llm.py  medicine.py  summarizer.py
backend/app/core/entity/: __init__.py  medical.py  suggestion.py
backend/app/core/medical/: __init__.py  diagnosis.py  ingredient.py
backend/app/core/repo/: __init__.py  cm_repo.py  drug_service.py
backend/app/infra/repo/: __init__.py  pg_cm_repo.py
backend/app/infra/restful/: NHIDrugService.py  __init__.py  nhi_drug_service.py
backend/app/routers/: setup_router.py
backend/app/routers/v0/: autocomplete.py  generate.py  summary.py
backend/app/routers/v0/dtos/: __init__.py  autocomplete.py  generate.py  summary.py
backend/app/utils/: parse.py
backend/migrate/: ICD-10-CM-2023.xlsx  init_db.py  ~$ICD-10-CM-2023.xlsx
backend/tests/: test_parse.py
deploys/: docker-compose-prod.yml
k8s/: deploys.yml
ui/: .env  .eslintrc.cjs  .firebaserc  .gitignore  Dockerfile  docker-compose.yaml  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
ui/.firebase/: hosting.ZGlzdA.cache
ui/.github/workflows/: firebase-hosting-deploy.yaml
ui/src/: App.tsx
ui/src/components/: AutoCompleteTextArea.tsx  (+2 more)
(+35 files in other folders)
