[tool.poetry]
name = "fastapi-backend-template"
version = "0.1.0"
description = ""
authors = ["YJack0000 <jackleagends@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
langchain-core = "^0.2.9"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.9"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
